--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="collapse navbar-collapse" id="MainNav">
           <ul class="nav navbar-nav">
             <li><a id="HomeBtn" onclick="ChangeScreens(1)">SolAZDev</a></li>
-            <li><a id="ResBtn" onclick="ChangeScreens(2)">Resume</a></li>
             <li><a id="PortBtn" onclick="ChangeScreens(3)">Portfolio</a></li>
+            <li><a id="ResBtn" onclick="ChangeScreens(2)">Resume</a></li>
             <li><a id="ProjBtn" onclick="ChangeScreens(4)">Projects</a></li>
             <li><a id="ReachBtn" onclick="ChangeScreens(5)">Contact</a></li>
           </ul>
@@ -35,142 +35,29 @@
     </nav>
     <!-- Home Screen -->
     <div id="HomeScreen">
-      <div class="jumbotron PageHead text-center">
+      <div class="PageHead jumbotron text-center" style="margin-bottom:0px;">
         <h2>SolAZDev</h2>
         <p>Indie Game Developer & Web Designer</p>
       </div>
+      <div class="well well-sm well-no">
+        Thank you for visiting!!
+        The Page is currently A Work in Progress but most of the ideal parts are complete!
+        Please do check out the portfolio and Projects Section.
+        Thank you for taking the time to see this web site, and I apologize for the inconvenience.
+        --SolAZDev
+      </div>
       <div class="container">
-        <div class="text-center">
-          <h1>Thank you for visiting!!</h1>
-          The Page is currently A Work in Progress but most of the ideal parts are complete!<br />
-          Please do check out the portfolio and Projects Section.<br />
-          Thank you for taking the time to see this web site, and I apologize for the inconvenience.<br />
-          --SolAZDev
-        </div>
         <br />
         <div class="row">
           <div class="col-sm-6 text-center">
             Hello and Welcome!<br />
+            My name's Carlos E. Orama, aka SolAZDev. I'm an Indie Game Developer and a Web Designer.<br />
+            I also occassionally do some software development. <br /><br />
+            I work primarily with Atom for code, Blender for 3D Art, and Unity for Game Development.
           </div>
           <div class="col-sm-6 text-center">
             G a l l e r y<br>
             Worthy carousel goes here.
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Resume Screen -->
-    <div id="ResumePage">
-      <div class="container-fluid">
-        <div class="container" style="text-align:justify">
-          <div class="text-center"><h4>Current Career Objective</h4></div>
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="text-center"><b>As an Individual</b></div></br>
-              As a college graduate who expanded his skillset, I'm continously seeking to learn more things about my fields(s) while moving forward with any given task and projects.
-            </div>
-            <div class="col-sm-4">
-              <div class="text-center"><b>As a Developer</b></div></br>
-              As a developer, I seek to preform as efficient and as clean as I can make my work. My code will always be readable, efficient and leave as little footprint as possible, to deliver the best experience to the user, and player.
-            </div>
-            <div class="col-sm-4">
-              <div class="text-center"><b>As an Artist</b></div></br>
-              As an artist I work from the main idea, upwards. I will make sure the main idea behind the portrayl is clear and as complex as it may need to be, for 3D I specialize in Low to Medium poly for the best performance.
-            </div>
-          </div>
-        </div>
-        <br />
-        <div class="row">
-          <div class="col-sm-6">
-            <h5>Skillset</h5>
-            <ul>
-              <li>Level and Set Design</li>
-              <li>C++, C#, HTML5, SASS, jQuery</li>
-              <li>Wix, Wordpress</li>
-              <li>3D Modeling and Sculpting</li>
-              <li>Video Editing and Key-frame Animation</li>
-            </ul>
-            <h5>Minor Skills</h5>
-            <ul>
-              <li>Bootstrap</li>
-              <li>UI/UX Design</li>
-              <li>Story Writing, Storyboarding</li>
-            </ul>
-          </div>
-          <div class="col-sm-6 RightSide">
-            <h5>Set Of Tools</h5>
-            <ul>
-              <li>Unity 5, Game Maker Studio, RPG Maker (XP,VXA,MV)</li>
-              <li>Visual Studio, MonoDevelop, Atom, Linux</li>
-              <li>Maya, Blender</li>
-              <li>After Effects, kdenlive</li>
-              <li>Photoshop, Illustrator, Gimp, Krita, Inkscape</li>
-            </ul>
-            <h5>Education</h5>
-            <ul>
-              <li>Boy Scouts of America - 2006-2014 - Eagle Rank (Troop 432)</li>
-              <li>Atlantic University College - 2011-2015 - BA Video Game Design</li>
-              <li>Self-thought - 2013-Now - Self Thought Programming</li>
-            </ul>
-          </div>
-        </div>
-        <div class="container-fluid">
-          <div class="text-center"><h5>Work Experience</h5></div>
-          <div class="row">
-            <div class="col-sm-4">
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <td>Job:</td>
-                    <td>Video Game Design Instructor</td>
-                  </tr>
-                  <tr>
-                    <td>Durning</td>
-                    <td>Febuary to April, 2016</td>
-                  </tr>
-                  <tr>
-                    <td>About</td>
-                    <td>I worked as a Video Game Design Instructor (3pm to 5pm) at Escuela Mariano Abril Intermedia. My Work involved teaching students the principles of 3D Modeling, Level Design and Game Programming.</br>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="col-sm-4">
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <td>Job:</td>
-                    <td>Head Programmer</td>
-                  </tr>
-                  <tr>
-                    <td>Durning</td>
-                    <td>August 2016 - Febuary 2017</td>
-                  </tr>
-                  <tr>
-                    <td>About</td>
-                    <td>I was the Head for Game & App Programming in a starting company called Axiom Horizon. Most of the work was done with Unity and HTML5.</br>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="col-sm-4">
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <td>Job:</td>
-                    <td>Environmental Designer & VR Interactive Programmer</td>
-                  </tr>
-                  <tr>
-                    <td>Durning</td>
-                    <td>December 2016 - Feburary 2017</td>
-                  </tr>
-                  <tr>
-                    <td>About</td>
-                    <td>  I worked as a Level Designer, Animator and Programmer at SI3D Media to create a VR Environment for some of their projects, including commercials, interactive environments and promotional assets.</br>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
           </div>
         </div>
       </div>
@@ -181,12 +68,12 @@
         <div class="text-center" style="vertical-align:middle;">
           <br /><br /><br /><br />
           <a id="PFLDesign" onclick="ChangeScreens(6)"><h2>Level Desgin</h2><br />Some of the best levels I've designed</a><br /><br /><br /><br />
-          <a id="PF3DArt" onclick="ChangeScreens(7)"><h2>3D Art</h2><br />Compositions and Models</a><br /><br /><br /><br />
+          <a id="PF3DArt" onclick="ChangeScreens(7)"><h2>3D Art</h2><br />Compositions and Models (Images and Sketchfabs)</a><br /><br /><br /><br />
           <a id="PFCSS" onclick="ChangeScreens(8)"><h2>Web Design</h2><br />Some CSS Userstyles and Pages I've designed.</a>
         </div>
       </div>
     </div>
-    <!-- -->
+    <!-- Portflio Sections -->
     <div id="PortLevel">
       <div class='container-fluid'>
         <div class="text-center"><h3>Level Design Screenshots</h3></div>
@@ -249,6 +136,127 @@
       </div>
       </div>
     </div>
+    <!-- Resume Screen -->
+    <div id="ResumePage">
+      <div class="container-fluid">
+        <div class="container" style="text-align:justify">
+          <br />
+          <div class="text-center">
+            <span style="padding-bottom:5px;"><b><h3>Carlos E. Orama De Jesus </h3></b></span>
+            SolAZDev@gmail.com - 939-244-2231 - PO Box 1126, Gurabo, PR 00778
+          </div><br />
+          <div class="text-center"><h4>Current Career Objective</h4></div>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="text-center"><b>As an Individual</b></div></br>
+              As a college graduate who expanded his skillset, I'm continously seeking to learn more things about my fields(s) while moving forward with any given task and projects.
+            </div>
+            <div class="col-sm-4">
+              <div class="text-center"><b>As a Developer</b></div></br>
+              As a developer, I seek to preform as efficient and as clean as I can make my work. My code will always be readable, efficient and leave as little footprint as possible, to deliver the best experience to the user, and player.
+            </div>
+            <div class="col-sm-4">
+              <div class="text-center"><b>As an Artist</b></div></br>
+              As an artist I work from the main idea, upwards. I will make sure the main idea behind the portrayl is clear and as complex as it may need to be, for 3D I specialize in Low to Medium poly for the best performance.
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-sm-6">
+            <h5>Skillset</h5>
+            <ul>
+              <li>Level and Set Design</li>
+              <li>C++, C#, HTML5, CSS, Bootstrap, jQuery</li>
+              <li>3D Modeling and Sculpting</li>
+              <li>Video Editing and Key-frame Animation</li>
+              <li>Wix, Wordpress</li>
+            </ul>
+            <h5>Minor Skills</h5>
+            <ul>
+              <li>jQuery Mobile, SQL</li>
+              <li>UI/UX Design</li>
+              <li>Story Writing, Storyboarding</li>
+            </ul>
+          </div>
+          <div class="col-sm-6 RightSide">
+            <h5>Set Of Tools</h5>
+            <ul>
+              <li>Unity 5, Game Maker Studio, RPG Maker (XP,VXA,MV)</li>
+              <li>Visual Studio, MonoDevelop, Atom, Linux</li>
+              <li>Maya, Blender</li>
+              <li>After Effects, kdenlive</li>
+              <li>Photoshop, Illustrator, Gimp, Krita, Inkscape</li>
+            </ul>
+            <h5>Education</h5>
+            <ul>
+              <li>Boy Scouts of America - 2006-2014 - Eagle Rank (Troop 432)</li>
+              <li>Atlantic University College - 2011-2015 - BA Video Game Design</li>
+              <li>Self-thought - 2013-Now - Self Thought Programming</li>
+            </ul>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <div class="text-center"><h5>Work Experience</h5></div>
+          <div class="row">
+            <div class="col-sm-4">
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <td>Job:</td>
+                    <td>Video Game Design Instructor</td>
+                  </tr>
+                  <tr>
+                    <td>Durning</td>
+                    <td>Febuary to April, 2016</td>
+                  </tr>
+                  <tr>
+                    <td>About</td>
+                    <td>I worked as a Video Game Design Instructor (3pm to 5pm) at Escuela Mariano Abril Intermedia. My Work involved teaching students the principles of 3D Modeling, Level Design and Game Programming.</br>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="col-sm-4">
+                <table class="table">
+                  <tbody>
+                    <tr>
+                      <td>Job:</td>
+                      <td>Head Programmer</td>
+                    </tr>
+                    <tr>
+                      <td>Durning</td>
+                      <td>August 2016 - Febuary 2017</td>
+                    </tr>
+                    <tr>
+                      <td>About</td>
+                      <td>I was the Head for Game & App Programming in a starting company called Axiom Horizon. Most of the work was done with Unity and HTML5.</br>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="col-sm-4">
+                  <table class="table">
+                    <tbody>
+                      <tr>
+                        <td>Job:</td>
+                        <td>Environmental Designer & VR Interactive Programmer</td>
+                      </tr>
+                      <tr>
+                        <td>Durning</td>
+                        <td>December 2016 - Feburary 2017</td>
+                      </tr>
+                      <tr>
+                        <td>About</td>
+                        <td>  I worked as a Level Designer, Animator and Programmer at SI3D Media to create a VR Environment for some of their projects, including commercials, interactive environments and promotional assets.</br>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
     <!-- Projects Screen -->
     <div id="ProjectsPage">
       <div class="container-fluid">
