Image Error Fix (Facebook)

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class='container'>
         <div class="text-center" style="vertical-align:middle;">
           <br /><br /><br /><br />
-          <a id="PFLDesign" onclick="ChangeScreens(6)"><h2>Level Desgin</h2><br />Some of the best levels I've designed</a><br /><br /><br /><br />
+          <a id="PFLDesign" onclick="ChangeScreens(6)"><h2>Level Design</h2><br />Some of the best levels I've designed</a><br /><br /><br /><br />
           <a id="PF3DArt" onclick="ChangeScreens(7)"><h2>3D Art</h2><br />Compositions and Models (Images and Sketchfabs)</a><br /><br /><br /><br />
           <a id="PFCSS" onclick="ChangeScreens(8)"><h2>Web Design</h2><br />Some CSS Userstyles and Pages I've designed.</a>
         </div>
@@ -79,15 +79,15 @@
         <div class="text-center"><h3>Level Design Screenshots</h3></div>
         <div class="row">
           <div class="col-md-4">
-            <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10403983_856956414349171_5410798642348857845_o.jpg?efg=eyJpIjoidCJ9&oh=591015f1103128e62dc5e934e073787f&oe=59FE2195">
-            <img class="img-responsive" src="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10403983_856956414349171_5410798642348857845_o.jpg?efg=eyJpIjoidCJ9&oh=591015f1103128e62dc5e934e073787f&oe=59FE2195" style="width:100%" /></a>
+            <a target="_blank" href="img/Esmeron Beach River.png">
+            <img class="img-responsive" src="img/EBRMini.png" style="width:100%" /></a>
           </div>
           <div class="col-md-4">
-            <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10687492_856956517682494_3112742743045850855_o.jpg?efg=eyJpIjoidCJ9&oh=c05f4bffca45e4c0242ae0be6f99de05&oe=59FE08C3">
+            <a target="_blank" href="img/Esmeron South River.png">
             <img class="img-responsive" src="img/Map1.png" style="width:100%;" /></a>
           </div>
           <div class="col-md-4">
-            <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/10015001_732963686748445_1051440864_o.jpg?efg=eyJpIjoidCJ9&oh=c4921fee28b7cc86e935b47c2fd0f050&oe=5A00E034">
+            <a target="_blank" href="img/Esmeron Forest NW.png">
             <img class="img-responsive" src="img/Map2.png" style="width:100%;" /></a>
           </div>
         </div>
@@ -118,7 +118,7 @@
             <a target="_blank" href="https://68.media.tumblr.com/0b2034d0d64704b8b5e338114303c06f/tumblr_oc8c0codgc1v1gts7o1_1280.jpg"><img class="img-responsive" src="https://68.media.tumblr.com/0b2034d0d64704b8b5e338114303c06f/tumblr_oc8c0codgc1v1gts7o1_1280.jpg" /></a>
           </div>
           <div class="col-sm-4">
-            <a target="_blank" href="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/13923433_1238488076196001_8620402817355867200_o.jpg?efg=eyJpIjoidCJ9&oh=219007ab376e5edc5d835e542f8d877d&oe=59FEAFD6"><img class="img-responsive" src="https://scontent.fsig3-1.fna.fbcdn.net/v/t31.0-8/fr/cp0/e15/q65/13923433_1238488076196001_8620402817355867200_o.jpg?efg=eyJpIjoidCJ9&oh=219007ab376e5edc5d835e542f8d877d&oe=59FEAFD6" /></a>
+            <a target="_blank" href="img/GlowNight.jpg"><img class="img-responsive" src="img/GlowNight.jpg" /></a>
           </div>
           <div class="col-sm-6">
             <a target="_blank" href="https://68.media.tumblr.com/3a0160681be04b9be6e5f820cf71b61e/tumblr_o4vmhjcmHG1v1gts7o1_1280.png"><img class="img-responsive" src="https://68.media.tumblr.com/3a0160681be04b9be6e5f820cf71b61e/tumblr_o4vmhjcmHG1v1gts7o1_1280.png" /></a>
@@ -142,7 +142,7 @@
         <div class="container" style="text-align:justify">
           <br />
           <div class="text-center">
-            <span style="padding-bottom:5px;"><b><h3>Carlos E. Orama De Jesus </h3></b></span>
+            <span style="padding-bottom:5px;"><b><h3>Carlos E. Orama De Jesus </h3></b></span><
             SolAZDev@gmail.com - 939-244-2231 - PO Box 1126, Gurabo, PR 00778
           </div><br />
           <div class="text-center"><h4>Current Career Objective</h4></div>
@@ -156,6 +156,9 @@
               As a developer, I seek to preform as efficient and as clean as I can make my work. My code will always be readable, efficient and leave as little footprint as possible, to deliver the best experience to the user, and player.
             </div>
             <div class="col-sm-4">
+￼
+PiBoy5 The HTML5 PipBoy
+￼
               <div class="text-center"><b>As an Artist</b></div></br>
               As an artist I work from the main idea, upwards. I will make sure the main idea behind the portrayl is clear and as complex as it may need to be, for 3D I specialize in Low to Medium poly for the best performance.
             </div>
