Smol update to UI

--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
   <body>
     <!-- Main Menu -->
     <nav class="navbar navbar-default MainMenu" role="navigation">
-      <div class="container-fluid">
+      <div class="container">
         <div class="navbar-header">
+
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#MainNav">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <a class="navbar-brand" id="HomeBtn" onclick="ChangeScreens(1)">SolAZDev</a>
         </div>
         <div class="collapse navbar-collapse" id="MainNav">
           <ul class="nav navbar-nav">
-            <li><a id="HomeBtn" onclick="ChangeScreens(1)">SolAZDev</a></li>
+            <!--<li><a id="HomeBtn" onclick="ChangeScreens(1)">SolAZDev</a></li>-->
             <li><a id="PortBtn" onclick="ChangeScreens(3)">Portfolio</a></li>
             <li><a id="ResBtn" onclick="ChangeScreens(2)">Resume</a></li>
             <li><a id="ProjBtn" onclick="ChangeScreens(4)">Projects</a></li>
-            <li><a id="ReachBtn" onclick="ChangeScreens(5)">Contact</a></li>
+            <!-- <li><a id="ReachBtn" onclick="ChangeScreens(5)">Contact</a></li> -->
           </ul>
         </div>
       </div>
