--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="container" style="text-align:justify">
           <br />
           <div class="text-center">
-            <span style="padding-bottom:5px;"><b><h3>Carlos E. Orama De Jesus </h3></b></span><
+            <span style="padding-bottom:5px;"><b><h3>Carlos E. Orama De Jesus </h3></b></span>
             SolAZDev@gmail.com - 939-244-2231 - PO Box 1126, Gurabo, PR 00778
           </div><br />
           <div class="text-center"><h4>Current Career Objective</h4></div>
@@ -158,9 +158,6 @@
               As a developer, I seek to preform as efficient and as clean as I can make my work. My code will always be readable, efficient and leave as little footprint as possible, to deliver the best experience to the user, and player.
             </div>
             <div class="col-sm-4">
-￼
-PiBoy5 The HTML5 PipBoy
-￼
               <div class="text-center"><b>As an Artist</b></div></br>
               As an artist I work from the main idea, upwards. I will make sure the main idea behind the portrayl is clear and as complex as it may need to be, for 3D I specialize in Low to Medium poly for the best performance.
             </div>
