--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h5>Set Of Tools</h5>
             <ul>
               <li>Unity 5, Game Maker Studio, RPG Maker (XP,VXA,MV)</li>
-              <li>Visual Studio, MonoDevelop, Atom, Linux</li>
+              <li>Visual Studio Code, MonoDevelop Atom.io, Linux</li>
               <li>Maya, Blender</li>
               <li>After Effects, kdenlive</li>
               <li>Photoshop, Illustrator, Gimp, Krita, Inkscape</li>
