--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="well well-sm well-no">
       Thank you for visiting!!
-      The Page is currently A Work in Progress <b>and currently under maintenance</b> but most of the ideal parts are
+      The Page is <b> currently under maintenance</b> but most of the ideal parts are
       complete!
       Please do check out the portfolio and Projects Section.
       Thank you for taking the time to see this web site, and I apologize for the inconvenience.
@@ -73,9 +73,9 @@
       <div class="row">
         <div class="col-sm-6 text-center">
           Hello and Welcome!<br />
-          My name's Carlos E. Orama, aka SolAZDev. I'm an Indie Game Developer and a Web Designer.<br />
+          My name's Carlos E. Orama, alias SolAZDev. I'm an Indie Game Developer and a Web Designer.<br />
           I also occassionally do some software development. <br /><br />
-          I work primarily with Atom for code, Blender for 3D Art, and Unity for Game Development.
+          I work primarily with VS Code for code, Blender for 3D Art, and Unity for Game Development.
         </div>
         <div class="col-sm-6 text-center">
           G a l l e r y<br>
@@ -486,7 +486,7 @@
             <div class="text-center"><h5>About</h5></div>
             <p>A girl who is ripped from her reality and dropped into a dream world.
             The Dreamer's Princess is a Maze Exploring, Bullet Hell, RPG currently
-          in development for Android, iOS, and the Nintendo 3DS.</p>
+          in development for Android, iOS, and hopefully the Nintendo Switch.</p>
           <div class="text-center"><h5>Features</h5></div>
           <ul>
             <li>Randomly Generated Levels where the player must adapt to a play style.</li>
