--- a/index.html
+++ b/index.html
@@ -195,21 +195,23 @@
         <div class="row">
           <div class="col-sm-4">
             <div class="text-center"><b>As an Individual</b></div></br>
-            I'm always looking for ways to expand and improve my skillset, learning new things around my field of work,
-            while using the best of my abilities onto my work and push the proyect forward.
+            I'm always looking for ways to expand and improve my skillset, learning new
+            things around my field of work, while using the best of my abilities onto
+            my work and push the proyect forward.
           </div>
           <div class="col-sm-4">
             <div class="text-center"><b>As a Developer</b></div></br>
-            As a developer, I seek to preform as efficient and as clean as I can while write. My code is always be
-            readable, efficient and leave as little footprint as possible, to deliver the best experience to the user,
-            and player.
+            As a developer, I seek to write my code as efficient and as clean as I can.
+            My code is always readable, efficient and leave as little footprint as
+            possible, to deliver the best experience to the user, and player.
           </div>
           <div class="col-sm-4">
             <div class="text-center"><b>As an Artist</b></div></br>
-            As an artist I work from the main idea, upwards. I will make sure the main idea behind the portrayl is
-            clear and as complex as it may need to be, for 3D I specialize in Low to Medium poly for the best
-            performance.
+            As an artist I work from the main idea, upwards. I will make sure the main idea is
+            portrayed clearly and as complex as it may need to be, for 3D I specialize in
+            Low-poly with smooth topology for the best performance.
           </div>
+
         </div>
       </div>
       <br />
