added GSW Web, my last job

--- a/index.html
+++ b/index.html
@@ -417,6 +417,17 @@
             </div>
           </div>
 
+          <div class="col-sm-6" id="PrOhtThT" onclick="ChangeScreens(14)">
+            <div class="card">
+              <div class="card-body">
+                <img src="img/GSWTitle.png" />
+              </div>
+              <div class="card-footer">
+                Genial Skills Web
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
@@ -619,7 +630,7 @@
               </div>
 
               <!-- Controls -->
-              <a class="carousel-control-prev" href="#cCLD-Carousel" data-slide="prev">
+              <a class="carousel-control-prev" href="#CLD-Carousel" data-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
               </a>
               <a class="carousel-control-next" href="#CLD-Carousel" data-slide="next">
@@ -723,10 +734,11 @@
               </tr>
             </tbody>
           </table>
-          </div>
           <div class="text-center"><h5>Links</h5>
             <a target="_blank" href="https://globalgamejam.org/2018/games/no-service-provider">Gamejam Entry & Download</a>
           </div>
+          </div>
+          
           </div>
         </div>
     </div>
@@ -739,7 +751,7 @@
         </div>
         <div class="row">
           <div class="col-sm-8">
-            <div id="NSP-Carousel" class="carousel slide" data-ride="carousel">
+            <div id="OHTTHT-Carousel" class="carousel slide" data-ride="carousel">
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -757,10 +769,10 @@
               </div>
 
               <!-- Controls -->
-              <a class="carousel-control-prev" href="#NSP-Carousel" data-slide="prev">
+              <a class="carousel-control-prev" href="#OHTTHT-Carousel" data-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
               </a>
-              <a class="carousel-control-next" href="#NSP-Carousel" data-slide="next">
+              <a class="carousel-control-next" href="#OHTTHT-Carousel" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
               </a>
             </div>
@@ -788,6 +800,91 @@
               <tr>
                 <td>Plataform</td>
                 <td style="text-align:right;">PC</td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="text-center"><h5>Links</h5>
+            <a target="_blank" href="https://solazdev.itch.io/ohttht">Game Page & Downloads</a>
+          </div>
+          </div>
+          </div>
+        </div>
+    </div>
+
+    <div id="PI-GSW" class="GamePage">
+      <div class="container-fluid">
+        <div class='container' style="margin-left:5">
+          <h2>Genial Skills Web</h2>
+          Puerto Rico's entretaining response to educational games.<br /><br />
+        </div>
+        <div class="row">
+          <div class="col-sm-8">
+            <div id="GSW-Carousel" class="carousel slide" data-ride="carousel">
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="img/GSW0.jpg">
+                  <div class="carousel-caption"></div>
+                </div>
+                <div class="carousel-item">
+                  <img src="img/GSW6.png">
+                  <div class="carousel-caption"></div>
+                </div>
+                <div class="carousel-item">
+                  <img src="img/GSW1.jpg">
+                  <div class="carousel-caption"></div>
+                </div>
+                <div class="carousel-item">
+                  <img src="img/GSW2.jpg">
+                  <div class="carousel-caption"></div>
+                </div>
+                <div class="carousel-item">
+                  <img src="img/GSW3.jpg">
+                  <div class="carousel-caption"></div>
+                </div>
+                <div class="carousel-item">
+                  <img src="img/GSW4.jpg">
+                  <div class="carousel-caption"></div>
+                </div>
+                <div class="carousel-item">
+                  <img src="img/GSW5.jpg">
+                  <div class="carousel-caption"></div>
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a class="carousel-control-prev" href="#GSW-Carousel" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#GSW-Carousel" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="text-center"><h5>About</h5></div>
+            <p>I worked on the initial Development of Genial Skills Web, and was in charge of the core functionality, such as Server Comunication, Dividing large ammounts of text into a dialogue, making the game entretaining amongs other things. I created Several Quiz Games and the first two minigames, along with the Avatar System, the mutliple scenes and how most of the game is managed.</p>
+          <div class="text-center"><h5>Features</h5></div>
+          <ul>
+            <li>Subscription to Science, Math, Spanish and English from 1st to 9th Grade*</li>
+            <li>Indirect VS</li>
+            <li>Frequent Updates</li>
+            <li>Others I might not be aware of.</li>
+          </ul>
+          <div class="text-center"><h5>Info</h5></div>
+          <table class="table">
+            <tbody>
+              <tr>
+                <td>Status</td>
+                <td style="text-align:right;">Unknown, as I do not work for Require Puerto Rico anymore.</td>
+              </tr>
+              <tr>
+                <td>Genre</td>
+                <td style="text-align:right;">Educational</td>
+              </tr>
+              <tr>
+                <td>Plataform</td>
+                <td style="text-align:right;">PC, Android, iOS</td>
               </tr>
             </tbody>
           </table>
