Now its just few constant updates

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     </div>
     <div class="well well-sm well-no">
       Thank you for visiting!!
-      The Page is <b> currently under maintenance</b> but most of the ideal parts are
-      complete!
-      Please do check out the portfolio and Projects Section.
-      Thank you for taking the time to see this web site, and I apologize for the inconvenience.
+      The Page is <b> regularly updating!</b> Most of what you can see now could be updated in the coming weeks.
+      Normally, over the weekends.
+      <!--Please do check out the portfolio and Projects Section. -->
+      Thank you for taking the time to see this web site.<br />
       --SolAZDev
     </div>
     <div class="container">
@@ -73,9 +73,9 @@
       <div class="row">
         <div class="col-sm-6 text-center">
           Hello and Welcome!<br />
-          My name's Carlos E. Orama, alias SolAZDev. I'm an Indie Game Developer and a Web Designer.<br />
+          My name is Carlos E. Orama, alias SolAZDev. I'm an Indie Game Developer and a Web Designer.<br />
           I also occassionally do some software development. <br /><br />
-          I work primarily with VS Code for code, Blender for 3D Art, and Unity for Game Development.
+          I work primarily with VS Code, Blender, and Unity. Feel free to check the unr
         </div>
         <div class="col-sm-6 text-center">
           G a l l e r y<br>
